<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ProfileEdit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_editor"
    tools:context=".ProfileEditor">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/returnButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:baselineAlignBottom="false"
        android:clickable="true"
        android:focusable="auto"
        android:focusableInTouchMode="false"
        android:onClick="onReturnClick"
        app:backgroundTint="#000000"
        app:fabCustomSize="50dp"
        app:fabSize="auto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:maxImageSize="40dp"
        app:srcCompat="@drawable/abc_vector_test" />

    <ScrollView
        android:id="@+id/profileScroll"
        android:layout_width="0dp"
        android:layout_height="500dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/profile" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/changeProfilePic"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="180dp"
                android:layout_marginLeft="180dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                android:onClick="onUploadClick"
                app:backgroundTint="#FFFFFF"
                app:fabCustomSize="50dp"
                app:layout_constraintBottom_toTopOf="@+id/usernameHint2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:maxImageSize="30dp"
                app:srcCompat="@drawable/edit" />

            <TextView
                android:id="@+id/usernameHint2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:text="@string/your_username"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@id/username" />

            <EditText
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/username" />

            <TextView
                android:id="@+id/emailHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:text="@string/your_email"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@id/username" />

            <EditText
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:text="@string/email" />

            <TextView
                android:id="@+id/pickla"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/pick_gender"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:gravity="center"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/Male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="0dp"
                    android:checked="true"
                    android:text="@string/male"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.297"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/email" />

                <RadioButton
                    android:id="@+id/Female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:text="@string/female"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.315"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Male" />
            </RadioGroup>

            <TextView
                android:id="@+id/poskodHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:text="@string/your_postal_code"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@id/username" />

            <EditText
                android:id="@+id/postal"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:inputType="textPostalAddress"
                android:text="@string/postal" />

            <TextView
                android:id="@+id/addressHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:text="@string/your_address"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@id/username" />

            <EditText
                android:id="@+id/addressLabel1"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/address" />

            <TextView
                android:id="@+id/bankAccNumHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:text="Bank Account Number :"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@id/username" />

            <EditText
                android:id="@+id/bankNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/address" />

            <TextView
                android:id="@+id/bankAccHolderHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:text="Bank Account Holder :"
                android:textSize="18sp"
                app:layout_constraintBaseline_toBaselineOf="@id/username" />

            <EditText
                android:id="@+id/bankHolder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/address" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@android:color/transparent"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/saveChange"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:background="#000000"
        android:onClick="onSaveClick"
        android:text="@string/save_changes"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>